<resources>
    <string name="app_name">""</string>
    <string name="action_settings">Settings</string>
    <string name="btnRecipe">View Recipe</string>
    <string name="description">Recipe Image</string>
    <string name="hello_world">Hello World!</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="txtDirections">Directions</string>
    <string name="txtIngredients">Ingredients</string>
    <string name="txtItem1">4 plum tomatoes</string>
    <string name="txtItem2">6 basil leaves</string>
    <string name="txtItem3">3 garlic cloves, chopped</string>
    <string name="txtItem4">3 TB olive oil</string>
    <string name="txtMix">Combine the ingredients and add salt to taste. Top french bread slice with mixture</string>
    <string name="txtTitle">Bruschetta Recipe</string>
</resources>
